--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -38,8 +38,8 @@
     margin-right: 4rem;
 }
 
-/* 메뉴에 마우스 갖다댈 시*/
-.n-list>ul>li:hover{
+/* 메뉴에 마우스 갖다댈 시 */
+.n-list>ul>a>li:hover{
     cursor: pointer;
     color: var(--yellow2);
 }
