--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -14,7 +14,7 @@
     font-weight: bold;
 }
 .contact>:nth-child(2){
-    color: black;
+    color: white;
     font-size: 2.5rem;
     font-weight: bold;
 }
