--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,7 +1,8 @@
 .about{
     display: flex;
+    align-items: center;
     justify-content: center;
-    height: 60vh;
+    height: 70vh;
 }
 
 .box {
@@ -16,7 +17,6 @@
     text-align: center;
     background: rgba(233, 233, 233, 0.863);
     border: 3px solid rgb(209, 200, 78);
-    box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
 }
 
