--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -3,8 +3,9 @@
     display: flex;
     height: 90vh;
     margin-bottom: 8rem;
-    margin-top: 9rem;
+
     margin-bottom: 13rem;
+    align-items: center;
 }
 
 .info {
@@ -14,7 +15,7 @@
 }
 
 .info>:nth-child(1){
-    color: black;
+    color: white;
     font-size: 2.5rem;
     font-weight: bold;
 }
