--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -5,6 +5,25 @@
     height: 70vh;
 }
 
+.title{
+    font-size: 2rem;
+    font-weight: bold;
+    color: black;
+}
+
+
+.profile>ul{
+    flex-direction: column;
+    text-align: center;
+    list-style:none;
+    padding-left:0px;
+}
+
+.profile>ul>li{
+    margin-bottom: 10px;
+}
+
+
 .box {
     width: 10rem;
     display: flex;
