--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -15,18 +15,36 @@
     font-weight: bold;
 }
 
+/* 프로젝트  */
 .project{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     padding: 2rem;
-    width: 30rem;
-    height: 20rem;
+    width: 32rem;
+    height: 22rem;
     background: rgba(255, 255, 255, 0.26);
     border: 6px solid orange;
     box-shadow: yellow;
     border-radius: 20px;
+    position: relative;
+    gap: 1rem;
+}
+
+/* 프로젝트 상세 */
+.pdesc{
+    width: 36rem;
+    height: 26rem;
+    background: rgb(211, 162, 0, 0.7);
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 10px;
+    word-break:break-all;
 }
 
 .project>img{
@@ -61,4 +79,30 @@
         width: 16rem;
         height: 9rem;
     }
+}
+
+/* pagination 버튼 색 */
+.swiper-pagination-bullet {
+	background-color: #ffffff !important;
+}
+
+/* 상세보기 버튼 */
+.more {
+    border: none;
+    background: orange;
+    font-family: DNFForgedBlade;
+    color: black;
+    border-radius: 10px;
+}
+
+/* 버튼 호버 이펙트 */
+.more:hover{
+    cursor: pointer;
+}
+
+
+/* 상세 내용 폰트 */
+pre{
+    font-family: DNFForgedBlade;
+
 }
