--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -48,6 +48,7 @@
         display: flex;
         flex-direction: column;
         gap: 18rem;
+        width: 100%;
     }
     .desc>*{
         position: static;
