--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -18,3 +18,12 @@
     font-size: 2.5rem;
     font-weight: bold;
 }
+
+@media screen and (max-width: 480px) {
+    .contact>:nth-child(2){
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+}
