--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -53,6 +53,11 @@
         width: 3rem;
         height: 3rem;
     }
+    .i-name>:nth-child(1){
+        color: white;
+        font-weight: bold;
+        font-size: 2rem;
+    }
 }
 
 /*이미지 회전*/
