--- a/src/Components/Project/PCard.css
+++ b/src/Components/Project/PCard.css
@@ -15,18 +15,18 @@
 }
 
 /* 프로젝트 상세 */
-.Pcard card-back{
-    width: 36rem;
-    height: 26rem;
+.card-back{
+    /* width: 32rem;
+    height: 22rem; */
     background: rgb(211, 162, 0, 0.7);
-    position: absolute;
+    /* position: relative;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     border-radius: 10px;
-    word-break:break-all;
+    word-break:break-all; */
 }
 
 .Pcard>img{
@@ -44,7 +44,7 @@
 /* 화면이 작을 때*/
 @media screen and (max-width: 480px){
     .Pcard{
-        width: 60%;
+        width: 70%;
 
     }
     .Pcard>img{
