--- a/src/Components/Project/PCard.css
+++ b/src/Components/Project/PCard.css
@@ -16,17 +16,18 @@
 
 /* 프로젝트 상세 */
 .card-back{
-    /* width: 32rem;
-    height: 22rem; */
+    width: 32rem;
+    height: 22rem;
     background: rgb(211, 162, 0, 0.7);
-    /* position: relative;
+    position: relative;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     border-radius: 10px;
-    word-break:break-all; */
+    word-break:break-all;
+    
 }
 
 .Pcard>img{
@@ -43,6 +44,8 @@
 .cLink{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .f-icon{
@@ -87,13 +90,12 @@
 /* 상세 내용 폰트 */
 pre{
     font-family: DNFForgedBlade;
-    line-height: 170%;
-    font-size: 1rem;
+    line-height: 160%;
+    font-size: 0.9rem;
     font-weight: lighter;
 }
 
 .back{
-    margin-left:-100%;
     border: none;
     background: none;
 }
